--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "hacker-news-clone",
+  "name": "just-tech-news",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "jest",
-    "seeds": "node seeds/index.js"
+    "seeds": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,8 +19,5 @@
     "handlebars": "^4.7.3",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.5"
-  },
-  "devDependencies": {
-    "jest": "^27.5.1"
   }
 }
